--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaspar Ricardo Júnior</title>
-</head>
-<body>
-    
-</body>
-</html>
+<ion-header [translucent]="true">
+    <ion-toolbar>
+        <ion-title>
+            Gaspar Ricardo Junior
+        </ion-title>
+    </ion-toolbar>
+</ion-header>
+
+
+<ion-content [fullscreen]="true">
+
+</ion-content>
